--- a/source/pages/default.less
+++ b/source/pages/default.less
@@ -1,14 +1,24 @@
-@imba-green: #22bb77;
-@imba-blue: #3399dd;
-@imba-gray: #202a3f;
+@lom-green: #22bb77;
+@lom-light-green: #22dd99;
+@lom-blue: #3399dd;
+@lom-gray: #202a3f;
+@code-block-background: #333333;
 @page-background: #454545;
 @page-text: hsla(0,0%,100%,.7);
-@green-border: 1px solid @imba-green;
-@gray-border: 1px solid #aaa;
-@default-padding-width: 15px;
-@default-padding-wh: 10px 15px;
+@default-font-size: 16px;
 
-html{font-family:Helvetica, sans-serif; font-size:16px; -ms-text-size-adjust:100%; -webkit-text-size-adjust:100%}
+@green-border: 1px solid @lom-green;
+
+@default-padding-width: 15px;
+
+@default-text-padding: 5px;
+@default-text-padding-wh: @default-text-padding @default-padding-width;
+
+@default-button-padding: 10px;
+
+@navbar-height: 50px;
+
+html{font-family:Helvetica, sans-serif; font-size:@default-font-size; -ms-text-size-adjust:100%; -webkit-text-size-adjust:100%}
 body{margin:0}
 article,aside,details,figcaption,figure,footer,header,main,menu,nav,section{display:block}
 summary{display:list-item}
@@ -29,7 +39,6 @@ sub{bottom:-0.25em}
 sup{top:-0.5em}
 img{border-style:none}
 svg:not(:root){overflow:hidden}
-code,kbd,pre,samp{font-family:monospace, monospace; font-size:1em}
 figure{margin:1em 40px}
 button,input,select,textarea{font:inherit; margin:0}
 optgroup{font-weight:bold}
@@ -46,9 +55,9 @@ legend{box-sizing:border-box; color:inherit; display:table; max-width:100%; padd
 [type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none}
 ::-webkit-input-placeholder{color:inherit;opacity:0.54}
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
-*{box-sizing:border-box}
+*,*:before,*:after{box-sizing:border-box}
 input,select,textarea,button{font-family:inherit;font-size:inherit;line-height:inherit}
-body{font-family:Helvetica,-apple-system,BlinkMacSystemFont,"Segoe UI",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:16px;line-height:1.5;color:#24292e;background-color:#fff}
+body{font-family:Helvetica,-apple-system,BlinkMacSystemFont,"Segoe UI",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:@default-font-size;line-height:1.5;color:#24292e;background-color:#fff}
 a{color:#0366d6;text-decoration:none}
 a:hover{text-decoration:underline}
 b,strong{font-weight:600}
@@ -120,29 +129,19 @@ body {
   color: @page-text;
 }
 
-#basic-info {
-  margin: auto;
-  width: 50%;
-  border: @green-border;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-}
-
 #page-header {
   background: none;
-  color: @imba-green;
+  color: @lom-green;
 }
 
 #logo {
-  width: 50px;
-  height: 50px;
+  width: @navbar-height;
+  height: @navbar-height;
   vertical-align: middle;
   border: @green-border;
 }
 
-#header-main, #header-links {
+#header-main, #header-navbar {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -153,77 +152,89 @@ body {
 #header-main {
   height: 100px;
   justify-content: center;
-  column-gap: 10px;
-  background: @imba-gray;
-  color: @imba-green;
+  column-gap: @default-button-padding;
+  background: @lom-gray;
+  color: @lom-green;
 }
 
 #header-main h1 {
-  background: @imba-gray;
-  color: @imba-green;
+  background: @lom-gray;
+  color: @lom-green;
 }
 
-#header-links {
-  height: 50px;
+#header-navbar {
+  height: @navbar-height;
+  align-items: center;
   justify-content: center;
   min-width: 200px;
-  column-gap: 50px;
-  background: @imba-green;
-  color: @imba-blue;
+  column-gap: 25px;
+  background: @lom-green;
+  color: @lom-blue;
 }
 
-/* Dropdown Button */
-.dropdown-button {
-  height: 50px;
-  padding: @default-padding-wh;
-  border: none;
-  font-size: 16px;
-  font-weight: bold;
-  background: @imba-green;
-  color: @imba-blue;
-}
-
-/* The container <div> - needed to position the dropdown content */
 .dropdown-section {
+  display: block;
   position: relative;
-  display: inline-block;
+  float: left;
+  //text-align: center;
+  //height: @navbar-height;
+  padding: @default-button-padding;
+  background-color: @lom-green;
+  color: @lom-blue;
 }
 
-/* Dropdown Content (Hidden by Default) */
+.dropdown-section a {
+  //height: @navbar-height;
+  color: @lom-blue;
+}
+
+.dropdown-section ul {
+  list-style: none;
+}
+
+.dropdown-section:hover>ul {
+  display: block;
+  position: absolute;
+}
+
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: white;
-  min-width: 200px;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  z-index: 1;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: @default-padding-wh;
-  text-decoration: none;
-  display: block;
+.dropdown-content li {
+  background-color: #e4eff7;
+  border-bottom: #ccc 1px solid;
+  border-right: #ccc 1px solid;
+  padding: @default-text-padding;
+  width: 100%;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ccc;
+.dropdown-content li a {
+  color: #000000
 }
 
-/* Show the dropdown menu on hover */
-.dropdown-section:hover .dropdown-content {
-  display: block;
+ul ul ul {
+  left: 100%;
+  top: 0;
+  margin-left: 1px;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown-section:hover .dropdown-button {
-  background-color: #22dd99;
+li:hover {
+  background-color: #95b4ca;
+}
+
+.dropdown-content li:hover {
+  background-color: #f0f0f0;
+}
+
+.expand {
+  font-size: 12px;
+  float: right;
+  margin-right: 5px;
 }
 
 main {
-  padding: 20px;
+  padding: 10px 25px;
 }
 
 .title, .large-info {
@@ -235,11 +246,12 @@ main {
   background-color: #eee;
   color: #444;
   cursor: pointer;
-  padding: 18px;
+  padding: @default-button-padding;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
+  z-index: auto;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -249,12 +261,54 @@ main {
 
 /* Style the collapsible content. Note: hidden by default */
 .collapsible-content {
-  padding: 0 18px;
+  padding: @default-text-padding-wh;
   display: none;
+  max-height: 0;
   overflow: hidden;
-  background-color: #f1f1f1;
+  transition: max-height 0.2s ease-out;
+  background-color: @lom-gray;
+  color: white;
+}
+
+.collapsible-content li {
+  padding: @default-text-padding;
+  margin-left: @default-padding-width;
+}
+
+/* Code Block and Copy Code Block Button*/
+pre {
+  position: relative;
+  overflow: auto;
+  padding: @default-text-padding;
+  border-radius: 10px;
+  margin: 5px 0;
+  background: @code-block-background;
+}
+
+pre button {
+  position: absolute;
+  bottom: @default-text-padding;
+  right: @default-text-padding;
+
+  font-size: @default-font-size;
+  padding: @default-text-padding;
+  border: groove 1px #7b7b7c;
+  border-radius: 5px;
+  margin: @default-text-padding;
+
+  background-color: #828282;
+}
+
+pre button:hover {
+  cursor: pointer;
+  background-color: #bcbabb;
 }
 
 code {
-  overflow-wrap: break-word;
+  padding: @default-text-padding;
+  margin-top: 0;
+  display: block;
+  text-align: left;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
